--- a/notebooks/RNN.ipynb
+++ b/notebooks/RNN.ipynb
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded Train and Validation Sets. Time taken: 283.3759672641754\n"
+      "Loaded Train and Validation Sets. Time taken: 369.17936515808105 seconds\n"
      ]
     }
    ],
@@ -36,7 +36,14 @@
     "import time\n",
     "import tensorflow as tf\n",
     "\n",
+    "num_threads = 100\n",
     "\n",
+    "tf.config.threading.set_inter_op_parallelism_threads(\n",
+    "    num_threads\n",
+    ")\n",
+    "tf.config.threading.set_intra_op_parallelism_threads(\n",
+    "    num_threads\n",
+    ")\n",
     "\n",
     "include_fields = ['hours','prov_id','day_of_week','avg_employees','perc_hours_today_before',\n",
     "                  'perc_hours_yesterday_before', 'perc_hours_tomorrow_before']\n",
@@ -46,12 +53,12 @@
     "startTime = time.time()\n",
     "train = pd.read_csv(\"/export/storage_adgandhi/PBJhours_ML/Data/Intermediate/train_test_validation/training_set.csv\",usecols=include_fields).dropna()\n",
     "val = pd.read_csv(\"/export/storage_adgandhi/PBJhours_ML/Data/Intermediate/train_test_validation/crossvalidation_set.csv\",usecols=include_fields).dropna()\n",
-    "print(f\"Loaded Train and Validation Sets. Time taken: {time.time()-startTime}\")"
+    "print(f\"Loaded Train and Validation Sets. Time taken: {time.time()-startTime} seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +192,7 @@
     "    def call(self, inputs, training=False):\n",
     "        #prov_id is first column\n",
     "        embedding_vectors = self.embedding(inputs[:,0])\n",
-    "        time_series = tf.expand_dims(inputs[:,1:15],2)\n",
+    "        time_series = tf.reverse(tf.expand_dims(inputs[:,1:15],2),[1])\n",
     "        additional_inputs = inputs[:,15:]\n",
     "\n",
     "        x = self.lstm(time_series)\n",
@@ -205,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,13 +220,15 @@
     "checkpoint_dir = './training_checkpointsRNN'\n",
     "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt_{epoch}\")\n",
     "\n",
+    "\n",
+    "\n",
     "def decay(epoch):\n",
     "  if epoch < 3:\n",
-    "    return 1e-4\n",
+    "    return 1e-3\n",
     "  elif epoch >= 3 and epoch < 7:\n",
-    "    return 1e-5\n",
+    "    return 1e-4\n",
     "  else:\n",
-    "    return 1e-6\n",
+    "    return 1e-5\n",
     "\n",
     "callbacks = [\n",
     "    tf.keras.callbacks.ModelCheckpoint(filepath=checkpoint_prefix,save_weights_only=True),\n",
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,36 +247,14 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "537979/537979 [==============================] - 9210s 17ms/step - loss: 10.9557 - mean_absolute_error: 2.3602 - val_loss: 12.5060 - val_mean_absolute_error: 2.8349\n",
+      "537979/537979 [==============================] - 21608s 40ms/step - loss: 9.5317 - mean_absolute_error: 2.1039 - val_loss: 22.4118 - val_mean_absolute_error: 3.7784\n",
       "Epoch 2/10\n",
-      "537979/537979 [==============================] - 10032s 19ms/step - loss: 9.5490 - mean_absolute_error: 2.1071 - val_loss: 12.2351 - val_mean_absolute_error: 2.7508\n",
+      "537979/537979 [==============================] - 21116s 39ms/step - loss: 9.4361 - mean_absolute_error: 2.0827 - val_loss: 21.4266 - val_mean_absolute_error: 3.7251\n",
       "Epoch 3/10\n",
-      "537979/537979 [==============================] - 11372s 21ms/step - loss: 9.3884 - mean_absolute_error: 2.0753 - val_loss: 11.8687 - val_mean_absolute_error: 2.6148\n",
+      "537979/537979 [==============================] - 15771s 29ms/step - loss: 9.4021 - mean_absolute_error: 2.0760 - val_loss: 19.5257 - val_mean_absolute_error: 3.4801\n",
       "Epoch 4/10\n",
-      "537979/537979 [==============================] - 10418s 19ms/step - loss: 9.4134 - mean_absolute_error: 2.0777 - val_loss: 11.7949 - val_mean_absolute_error: 2.5777\n",
-      "Epoch 5/10\n",
-      "537979/537979 [==============================] - 11260s 21ms/step - loss: 9.3639 - mean_absolute_error: 2.0671 - val_loss: 11.7731 - val_mean_absolute_error: 2.5611\n",
-      "Epoch 6/10\n",
-      "537979/537979 [==============================] - 11316s 21ms/step - loss: 9.3436 - mean_absolute_error: 2.0633 - val_loss: 11.7613 - val_mean_absolute_error: 2.5502\n",
-      "Epoch 7/10\n",
-      "537979/537979 [==============================] - 12078s 22ms/step - loss: 9.3300 - mean_absolute_error: 2.0609 - val_loss: 11.7619 - val_mean_absolute_error: 2.5470\n",
-      "Epoch 8/10\n",
-      "537979/537979 [==============================] - 14084s 26ms/step - loss: 9.3556 - mean_absolute_error: 2.0708 - val_loss: 11.5503 - val_mean_absolute_error: 2.5093\n",
-      "Epoch 9/10\n",
-      "537979/537979 [==============================] - 18873s 35ms/step - loss: 9.3360 - mean_absolute_error: 2.0646 - val_loss: 11.5439 - val_mean_absolute_error: 2.5045\n",
-      "Epoch 10/10\n",
-      "537979/537979 [==============================] - 22957s 43ms/step - loss: 9.3327 - mean_absolute_error: 2.0637 - val_loss: 11.5369 - val_mean_absolute_error: 2.5053\n"
+      "333266/537979 [=================>............] - ETA: 1:08:33 - loss: 9.1845 - mean_absolute_error: 2.0337"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fedc711d6d0>"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
